--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,42 +13,68 @@ body {
 }
 
 #content {
-    display: flex;
+    display: grid
+    grid-template-columns: 3;
+    grid-template-rows: 1;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     color: white;
 }
 
-#content div{
-    margin: 1em;
+form {
+  border: 5px solid #f1f1f1;
+  }
+
+input[type=text], input[type=password], input[type=number] {
+width: 100%;
+padding: 16px 8px;
+margin: 8px 0;
+display: inline-block;
+border: 1px solid #ccc;
+box-sizing: border-box;
 }
 
-#content form{
-    margin: 1em;
-    width:100%;
-    display:flex;
-    height: 2em;
+.icon {
+font-size: 110px;
+display: flex;
+justify-content: center;
+color: #4286f4;
 }
 
-#recently_added_delta_days {
-    flex-grow: 3;
-    height: 100%;
+button {
+background-color: #4286f4;
+color: white;
+padding: 14px 0;
+margin: 10px 0;
+border: none;
+cursor: grab;
+width: 48%;
 }
 
-#submit {
-    flex-grow: 1;
-    height: 100%;
+h1 {
+text-align:center;
+fone-size:18;
 }
-
-
-.underline {
-    border-top: 10px solid black;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    border-bottom: 10px solid black;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-    width: 100%;
-    margin: 0;
+button:hover {
+opacity: 0.8;
+}
+.formcontainer {
+text-align: center;
+margin: 24px 50px 12px;
+}
+.container {
+padding: 16px 0;
+text-align:left;
+}
+span.psw {
+float: right;
+padding-top: 0;
+padding-right: 15px;
+}
+/* Change styles for span on extra small screens */
+@media screen and (max-width: 300px) {
+span.psw {
+display: block;
+float: none;
 }
