Made the playlist generate immediately after settings are updated

--- a/templates/settings_updated.html
+++ b/templates/settings_updated.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <div id="content">
-        <p>Your Details have been updated.</p>
+        <p>Your details have been updated.</p>
         <p>Thank you, {{ user.name.split(" ")[0] }}</p>
     </div>
 
